@@ -1,3 +1,9 @@
+2004-06-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* .cvsignore: Add *.diff.
+
+	* configure.ac (TRAMP_CLEAN_FILES): Add *.diff.
+
 2004-05-30  Michael Albinus  <michael.albinus@gmx.de>
 
 	* configure.ac: Set TRAMP_EMACS_MERGE_VERSION (to 2.0.41).
